# GreenScreenComposite

./: CMakeLists.txt  README  alphamask.cpp  composite.cpp  settings.txt
